--- a/thesis/sources.bib
+++ b/thesis/sources.bib
@@ -488,3 +488,17 @@
   year={2010},
   publisher={New Riders Publishing},
 }
+@phdthesis{fielding2000architectural,
+  title={{A}rchitectural {S}tyles and the {D}esign of {N}etwork-{B}ased {S}oftware {A}rchitectures},
+  author={Fielding, R. T.},
+  year={2000},
+  school={University of California}
+}
+@inproceedings{zandy2002reliable,
+  title={{R}eliable {N}etwork {C}onnections},
+  author={Zandy, V. C. and Miller, B. P.},
+  booktitle={Proceedings of the 8th annual International Conference on Mobile Computing and Networking},
+  pages={95--106},
+  year={2002},
+  organization={ACM}
+}
