Restructure whole work and add missing fixme annotations.

--- a/thesis/discussion.tex
+++ b/thesis/discussion.tex
@@ -1,12 +1,13 @@
-\chapter{Discussion: Bright Future Ahead for HTML5}
+\chapter{Discussion}
 \label{chapter:discussion}
+
+\fixme{write chapter}
 
 \begin{itemize}
 \item validate results
 \item discuss about further work or possible improvements
 \item Page Speed mobile
 \item YSlow mobile bookmarklet
-\item blaze.io
 \item img optimizations
 \item true progressive enhancement
 \end{itemize}
@@ -21,3 +22,7 @@
     -- Brian Fling \cite{fling2009mobile}
   \end{flushright}
 \end{quotation}
+
+There is grandeur in this view, but without idealism and relentless
+pursue of universal accessibility, the full potential of the Open Web
+might never be reached.
