--- a/thesis/methods.tex
+++ b/thesis/methods.tex
@@ -1,8 +1,5 @@
-\chapter{Implementation}
+\chapter{Use Case: Conference Schedule Application}
 \label{chapter:methods}
-
-\section{Qt Developer Days 2011 Conference Schedule Application}
-\label{section:devdays}
 
 The Qt Developer
 Days\footnote{\url{http://qt.nokia.com/qtdevdays2011/}} is a
@@ -11,7 +8,7 @@ user interface framework\footnote{\url{http://qt.nokia.com/}}. We
 created a mobile web application with contextual and personalized
 session information and daily schedule for the conference.
 
-\subsection{Requirements}
+\section{Requirements}
 
 The target group for the conference application was mobile developers
 attending the Qt Developer Days conference. Therefore, we could expect
@@ -48,7 +45,14 @@ for panning and zooming the floor maps of the conference venue. Also,
 the client wanted a touchable star rating widget on the feedback form
 for easy and visual session rating on touch screens.
 
-\subsection{Application Architecture}
+\fixme{add intro/reqs for jsoncache?}
+
+\chapter{Implementation}
+\label{chapter:implementation}
+
+\fixme{add intro to chapter}
+
+\section{Conference Application}
 
 \begin{figure}[ht]
   \begin{center}
