--- a/thesis/results.tex
+++ b/thesis/results.tex
@@ -1,6 +1,8 @@
 \chapter{Results}
 \label{chapter:results}
 
+\fixme{add intro to chapter}
+
 \section{Targeting Different Platforms}
 \label{section:targeting-platforms}
 
@@ -566,6 +568,4 @@ static assets were an essential part of our caching strategy.
 
 \section{Conclusions}
 
-\begin{itemize}
-\item go through research questions and provided answers
-\end{itemize}
+\fixme{conclude results and go through RQs and answer them}
