Add screenshot with iPad.

--- a/thesis/methods.tex
+++ b/thesis/methods.tex
@@ -94,9 +94,17 @@ APIs.
 The application was designed for touch screens on various platforms
 and screen sizes. The layout adjusts to the available space and
 provides rich interactive components. Integration to social networking
-services was also added as an additional functionality.
+services was also added as an additional
+functionality. Figure~\ref{figure:ipad-session.jpg} shows an example
+view in the application.
 
-\fixme{add screenshots on different devices (at least phone and tablet}
+\begin{figure}[ht]
+  \begin{center}
+    \includegraphics[width=\textwidth]{images/ipad-session.jpg}
+    \caption{Session details view on an iPad.}
+    \label{figure:ipad-session.jpg}
+  \end{center}
+\end{figure}
 
 \section{JSONCache JavaScript Library}
 \label{section:jsoncache}
